# vgpu

./: .editorconfig  CMakeLists.txt  README.md  generate_vs2019_x64.bat
.github/workflows/: build.yml
include/: vgpu.h
samples/: CMakeLists.txt
samples/00_hello_world/: main.c
src/: vgpu.c  vgpu_driver.h  vgpu_driver_d3d12.cpp  vgpu_driver_vulkan.cpp
